<resources>
    <string name="app_name">Herafi</string>
    <string name="main_title">Herafi</string>
    <string name="main_slogan">Use your experince to fulfill your
                                dreams and make your first step
                                in the world
                                be happy with our services
                                Good Luck !</string>
    <string name="signIn_verify">Verify Account</string>
    <string name="signIn_email">Email</string>
    <string name="signIn_password">Password</string>
    <string name="signIn_rememberMe">Save</string>
    <string name="signIn_forgetPassword">Forget Password ?</string>
    <string name="signIn_login">Login</string>
    <string name="signIn_fingerprint">Fingerprint</string>
    <string name="signIn_facebook">Facebook</string>
    <string name="signIn_newWorker">New Craftsman? Sign Up</string>
    <string name="signIn_SignIn">Sign In</string>
    <string name="signUp_SignUp">Sign Up</string>
    <string name="signUp_under_signUp">Enter your personal data to help us  to checkout your data  then send verify code :</string>
    <string name="signUp_name">Name</string>
    <string name="signUp_phone">Phone</string>
    <string name="signUp_secure_code">Secure Code</string>
    <string name="signUp_identity_number">Identity Number</string>
    <string name="signUp_description">Description</string>
    <string name="signUp_text_city">City :</string>
    <string name="signUp_text_num_queue">Number of people can be served :</string>
    <string name="signUp_text_select_hand_pair_paid">Select hand pair paid :</string>
    <string name="signUp_btn_choose_your_exp">Choose your experiences</string>
    <string name="signUp_your_exp">Your crafts :</string>
    <string name="signUp_upload_photo">Upload your photos :</string>
    <string name="signUp_btn_identity">Identity Card</string>
    <string name="signUp_btn_certifications">Certifications</string>
    <string name="signUp_btn_other_type">Other Type</string>
    <string name="signUp_text_privacy1">"You accept our PrivacyPolicy and Conditions&amp;Terms of this app."</string>
    <string name="signUp_btn_signUp">Register</string>
    <string name="privcy_policy">Privacy Policy</string>
    <string name="conditions_terms"><![CDATA[Conditions & Terms]]></string>
    <string name="title_activity_request">Request</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Craftsman Name</string>
    <string name="nav_header_subtitle">Abdo@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_en">English</string>
    <string name="action_ar">Arabic</string>
    <string name="menu_project">Projects</string>
    <string name="menu_request">Requests</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Profile">Profile</string>
    <string name="menu_chart">Charts</string>
    <string name="menu_about">About</string>
    <string name="profile_name">Craftsman\'s Name</string>
    <string name="profile_email">Abdo@gmail.com</string>
    <string name="profile_phone">Phone Number</string>
    <string name="profile_phone_value">0958258264</string>
    <string name="profile_date_join">Date Join</string>
    <string name="profile_date_value">22/3/2021</string>
    <string name="profile_identity">Identity Number</string>
    <string name="profile_identity_value">47299584051</string>
    <string name="profile_lat_lng_value">32.4123 / 54.8421</string>
    <string name="profile_lat_lng">Latitude / Longtitude</string>
    <string name="profile_city">City</string>
    <string name="profile_city_value">Aleppo</string>
    <string name="profileLevel">your Level</string>
    <string name="profile_level_value">Normal</string>
    <string name="profile_hand_pire_paid">Hand Pire Paid</string>
    <string name="profile_low_cost">2000</string>
    <string name="profile_high_cost">3000</string>
    <string name="profile_size_queue">Number of people can be served</string>
    <string name="profile_size_queue_value">8</string>
    <string name="DescriptionTitle">Description</string>
    <string name="DescriptionWorker">My work is awesome !</string>
    <string name="about_description">This app help you to find  your customer and viewing the  deeds in analyzing charts and  see new requests for working display your perview works  for other custmers Be Heppy with our Services</string>
    <string name="about_use_our_services">How to use our services ?</string>
    <string name="about_Terms_Conditions"><![CDATA["Conditions & Terms  "]]></string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="profile_busy">Busy</string>
    <string name="projectDetails_relative_user">Relative User</string>
    <string name="projectDetails_user_name">Karim</string>
    <string name="projectDetails_user_email">herafi@gmail.com</string>
    <string name="projectDetails_photos">Photos</string>
    <string name="projectDetails_add_photos">Add Photo</string>
    <string name="projectDetails_price">Price</string>
    <string name="projectDetails_price_value">1000 $</string>
    <string name="projectDetails_rating">Rating</string>
    <string name="projectDetails_comment">Comment</string>
    <string name="projectDetails_comment_value">Your project is awesome</string>
    <string name="signIn_dialog_verify_title">Verify Account</string>
    <string name="signIn_dialog_verify_message">Enter verify code here :</string>
    <string name="signIn_dialog_verify_hintEdit">code</string>
    <string name="signIn_dialog_verify_Yes">OK</string>
    <string name="signIn_dialog_verify_No">CANCEL</string>
    <string name="signIn_toast_editTextIsEmpty">Fill the fields first !</string>
    <string name="signIn_toast_editTextIsNotDigit">Please enter the current code !</string>
    <string name="signIn_toast_noInternet">Check your connection internet</string>
    <string name="signIn_dialog_forgetpassword_title">Forget Password</string>
    <string name="signIn_dialog_forgetpassword_message">Enter secure code here :</string>
    <string name="signIn_dialog_fingerprint_title">Fingerprint Login</string>
    <string name="signIn_dialog_fingerprint_message">Use your Fingerprint to login :</string>
    <string name="signIn_toast_noFingerprintBefore">Sign Up then add Fingerprint authentication</string>
    <string name="signIn_toast_noGoogleBefore">Sign Up then add Google authentication</string>
    <string name="signIN_toast_fingerprintNoSupport">Your device doesn\'t support fingerprint !</string>
    <string name="signIn_toast_fingerprintNoEnroll">You did\'t enrolled fingerprint !</string>
    <string name="signIn_toast_fingerprintClickImage">Use fingerprint from right place !</string>
    <string name="signIn_toast_fillFields">Fill all the fields !</string>
    <string name="signIn_toast_currentEmail">Enter your current email !</string>
    <string name="signUp_btn_Photo_person">Choose Your photo</string>
    <string name="signUp_last_name">Last Name</string>
    <string name="signUp_your_city">Your City</string>
    <string name="signUp_toast_noPermissionsAgree">We need the location to complete the process !</string>
    <string name="signUp_toast_identity_digit">Enter your current identity number</string>
    <string name="signUp_toast_phone_digit">Enter your current phone number</string>
    <string name="signUp_toast_secure_digit">Only digits are allowed !</string>
    <string name="signUp_toast_craftsman_photo">Select your personal photo</string>
    <string name="signUp_toast_size_people">Select number of people can be served !</string>
    <string name="signUp_toast_NoCity">Select your city</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="craftCategory_fragment_title">Crafts</string>
    <string name="craftCategory_fragment_subtitle">Select your experience :</string>
    <string name="signUp_toast_noGoToGallery">We need a permission to access to gallery !</string>
    <string name="request_toast_noCallPermission">We need your permission to make phone call</string>
    <string name="profile_status_yes">YES</string>
    <string name="profile_status_no">NO</string>
    <string name="profile_images">The Images</string>
    <string name="profile_crafts">The Crafts</string>
    <string name="signIn_or">OR</string>
    <string name="signIn_dialog_forgetpassword_email">Email</string>
    <string name="signIn_dialog_forgetpassword_phone">Phone Number</string>
    <string name="signIn_dialog_forgetpassword_SecureCode">Secure Code</string>
    <string name="signup_toast_cityLoadedSuccessfully">The cities is loaded successfully !</string>
    <string name="toast_token_not_secure">Token isn\'t secure !</string>
    <string name="signUp_toast_NoCrafts">Select at least one cratf</string>
    <string name="signUp_toast_NoImage">Select one image at least</string>
    <string name="signUp_progress_wait">Please wait...</string>
    <string name="signIn_toast_noFacebookAccount">Sign Up and Add facebook Login Service in upcoming login</string>
    <string name="signUp_toast_NoSelfPhoto">Select your photo</string>
    <string name="signUp_toast_NOACCEPT_PRIVACY_CONDITION"><![CDATA["If you want to try our services , please accept our terms & conditions and dealing with privacy policy  !!! "]]></string>
    <string name="signUp_toast_noPermissionsStorage">We need images to check it then accept you</string>
    <string name="authentication_title_facebook">Facebook Authentication</string>
    <string name="authentication_title_google">Google Authentication</string>
    <string name="authentication_title_fingerprint">Fingerprint Authentication</string>
    <string name="authentication_toast_facebook_canceled">Facebook login process is canceled !</string>
    <string name="authentication_toast_fingerprint_added_before">You added Fingerprint Login before !</string>
    <string name="authentication_toast_facebook_added_before">You added Facebook Login before !</string>
    <string name="authentication_toast_google_added_before">You added Google Login before !</string>
    <string name="menu_auth">Authentications</string>
    <string name="robot">You are robot !</string>
    <string name="facebook_app_id">.................</string>
    <string name="fb_login_protocol_scheme">........................</string>
    <string name="mapbox_toast_distance">The distance is </string>
    <string name="signIn_google">Google</string>
    <string name="agroa_toast_success_join_local">successful Join to the channel</string>
    <string name="agroa_toast_success_join_remote">Your friend is ready !</string>
    <string name="agroa_toast_close_conversation">The conversataion is closed !</string>
    <string name="agora_toast_noPerms">We need your permissions to complete !</string>
    <string name="welcome">Welcome </string>
    <string name="show_password">Enter the code :  </string>
    <string name="about_title">Be Fine</string>
    <string name="payment_canceled">Payment process is cancelled</string>
    <string name="payment_success">Payment process is finished successfully !</string>
    <string name="navigation_toast_click_again">Click back again !</string>
    <string name="service_toast_1">"Hi "</string>
    <string name="accept_refuse_dialog_title">Fulfill Request</string>
    <string name="accept_refuse_dialog_message">Do you want to fulfill this request ?</string>
    <string name="accept_refuse_dialog_accept">accept</string>
    <string name="accept_refuse_dialog_Refuse">Refuse</string>
    <string name="accept_refuse_dialog_cancel">Cancel</string>
    <string name="accept_refuse_dialog_withHandPaid">Hand wage</string>
    <string name="accept_refuse_dialog_withoutHandPaid">Hand wage + cost of the repair</string>
</resources>